--- a/Codigo/css/barras/estilos_barra_navegacion.css
+++ b/Codigo/css/barras/estilos_barra_navegacion.css
@@ -14,7 +14,7 @@ nav ul div{
 	position: fixed;
 	top:0px;
 	z-index: 100;
-	background-color:chocolate;
+	background-color:#0080BC;
 	border-radius: 4px;
 	width: 100%;
 	margin-bottom: 20px;
