--- a/Codigo/css/mihojadeestilos.css
+++ b/Codigo/css/mihojadeestilos.css
@@ -3,7 +3,7 @@
 body{
 	font-family: arial,verdana;
 	border-radius: 10px;
-	background-color: #fafafa;
+	background-color:whitesmoke;
 	/*#042029 42BB9E*/
 }
 #contactanos{
@@ -19,9 +19,8 @@ section{
 	width: 500px;
 	border-radius:10px;
 	padding: 0px 30px;
-	background-color:#f2f2f2;
-
-	
+	background-color:white;	
+	border: solid 1px #68A7BC;
 }
 #Comentarios{
 	margin-top: 100px;
@@ -74,9 +73,6 @@ button[type='submit']{
 }
 button[type='submit']:hover{
 	background:#C88200;
-}
-h1{
-	color:white;
 }
 @media screen and (max-width:800px) {
 
